k8s/nodejs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ashish-3162696-kubernetes-and-devops-advance-app
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: ashish_3162696_kubernetes_and_devops_advance-api
  template:
    metadata:
      labels:
        app: ashish_3162696_kubernetes_and_devops_advance-api
    spec:
      containers:
        - name: ashish-3162696-kubernetes-and-devops-advance-app
          image: iamashish480/ashish_3162696_kubernetes_and_devops_advance-app:v3 # Replace with your actual image4
          imagePullPolicy: Always 
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "80Mi"
              cpu: "100m"
            limits:
              memory: "150Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
