k8s/nodejs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ashish-3162696-kubernetes-and-devops-advance-service
spec:
  selector:
    app: ashish_3162696_kubernetes_and_devops_advance-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
